--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "1st-hbo/big-little-lies-season-2-episode 1-tv-streaming",
+    "name": "1st-hbo/big-little-lies-season-2-episode-1-tv-streaming",
     "description": "Watch Big Little Lies Season 2 Episode 1 Online for Free Putlocker S02E01 WATCH FULL EPISODES NOW (CLICK LINK BELOW TO WATCHING)",
 	"keywords": ["Big Little Lies Season 2 Episode 1 Online"],
     "type": "library",
